# vapour

./: .env.default  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
docker/: Caddyfile.example  Caddyfile.prod.example  DEPLOY.md  Dockerfile.app  Dockerfile.caddy  Dockerfile.tor  docker-compose.deploy.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-entrypoint-tor.sh  torrc
src/: __init__.py  env.py  main.py  templating.py
src/logger/: __init__.py  logger.py
src/routes/: auth.py  chat.py
src/services/: __init__.py  manager.py  pgp_verifier.py  rate_limit.py  session.py  validators.py
src/static/css/: style.css
src/static/js/: chat.js  conversation.js  js-check.js
src/templates/: _footer.html  chat.html  conversation.html  login.html
tests/: test_chat.py  test_manager.py  test_pgp_verifier.py  test_rate_limit.py  test_session.py  test_validators.py
