[project]
name = "vapour"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "jinja2>=3.1.6",
    "pgpy>=0.6.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "regex>=2026.7.19",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
]
